Hide overflow on content-wrapper to fix nav crowding on Crocodile page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,6 +39,7 @@ body {
 
 .content-wrapper {
     padding-bottom: 222px;
+    overflow: hidden;
 }
 
 a {
